force-app/main/default/objects/FIN_AXSRuleAction__c/FIN_AXSRuleAction__c.object-meta.xml
<CustomObject>
    <label>AXS Rule Action</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AXS Rule Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>