force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_DestinationField__c.field-meta.xml
<CustomField>
    <fullName>FIN_DestinationField__c</fullName>
    <label>Destination Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>context_id</fullName>
            </value>
            <value>
                <fullName>context_name</fullName>
            </value>
            <value>
                <fullName>action_date</fullName>
            </value>
            <value>
                <fullName>customer_id</fullName>
            </value>
            <value>
                <fullName>order_id</fullName>
            </value>
            <value>
                <fullName>channel</fullName>
            </value>
            <value>
                <fullName>outlet</fullName>
            </value>
            <value>
                <fullName>operator</fullName>
            </value>
            <value>
                <fullName>offer_lookup</fullName>
            </value>
            <value>
                <fullName>offer_name</fullName>
            </value>
            <value>
                <fullName>venue_id</fullName>
            </value>
            <value>
                <fullName>venue_name</fullName>
            </value>
            <value>
                <fullName>venue_address</fullName>
            </value>
            <value>
                <fullName>venue_city</fullName>
            </value>
            <value>
                <fullName>venue_state</fullName>
            </value>
            <value>
                <fullName>venue_zip</fullName>
            </value>
            <value>
                <fullName>product_id</fullName>
            </value>
            <value>
                <fullName>primary_product_id</fullName>
            </value>
            <value>
                <fullName>product_description</fullName>
            </value>
            <value>
                <fullName>product_type</fullName>
            </value>
            <value>
                <fullName>inventory_type</fullName>
            </value>
            <value>
                <fullName>entity_id</fullName>
            </value>
            <value>
                <fullName>client_id</fullName>
            </value>
            <value>
                <fullName>client_name</fullName>
            </value>
            <value>
                <fullName>event_id</fullName>
            </value>
            <value>
                <fullName>event_lookup</fullName>
            </value>
            <value>
                <fullName>event_description</fullName>
            </value>
            <value>
                <fullName>event_start_date</fullName>
            </value>
            <value>
                <fullName>event_end_date</fullName>
            </value>
            <value>
                <fullName>event_build_date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>