force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_DestinationFieldValue__c.field-meta.xml
<CustomField>
    <fullName>FIN_DestinationFieldValue__c</fullName>
    <label>Destination Field Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>