force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_Library_Association__c.field-meta.xml
<CustomField>
    <fullName>FIN_Library_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select this lookup value when  you want to update the destination Field value is Library Association</description>
    <inlineHelpText>Select this lookup value when  you want to update the destination Field value is Library Association</inlineHelpText>
    <label>Library Association</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>AXS Rule Actions</relationshipLabel>
    <relationshipName>AXS_Rule_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>