force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_Object__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object__c</fullName>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Payment_Distribution</fullName>
                <label>Payment Distribution</label>
            </value>
            <value>
                <fullName>Sales Transactions</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>FIN_Financial_Code__c</fullName>
                <isActive>false</isActive>
                <label>FIN_Financial_Code__c</label>
            </value>
            <value>
                <fullName>FIN_PaymentDistribution__c</fullName>
                <isActive>false</isActive>
                <label>FIN_PaymentDistribution__c</label>
            </value>
            <value>
                <fullName>FIN_Payment__c</fullName>
                <isActive>false</isActive>
                <label>FIN_Payment__c</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Order</label>
            </value>
            <value>
                <fullName>OrderItem</fullName>
                <isActive>false</isActive>
                <label>OrderItem</label>
            </value>
            <value>
                <fullName>SBQQ__ContractedPrice__c</fullName>
                <isActive>false</isActive>
                <label>SBQQ__ContractedPrice__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>