force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_SortingRule__c.field-meta.xml
<CustomField>
    <fullName>FIN_SortingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AXS Rule Engine</label>
    <referenceTo>FIN_AXSRuleEngine__c</referenceTo>
    <relationshipLabel>AXS Rule Actions</relationshipLabel>
    <relationshipName>AXS_Rule_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>