force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_SourceField__c.field-meta.xml
<CustomField>
    <fullName>FIN_SourceField__c</fullName>
    <label>Source Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sf_context_id</fullName>
            </value>
            <value>
                <fullName>sf_context_name</fullName>
            </value>
            <value>
                <fullName>sf_payment_date</fullName>
            </value>
            <value>
                <fullName>sf_deposit_date</fullName>
            </value>
            <value>
                <fullName>sf_payment_id</fullName>
            </value>
            <value>
                <fullName>sf_order_id</fullName>
            </value>
            <value>
                <fullName>sf_entity_id</fullName>
            </value>
            <value>
                <fullName>sf_entity</fullName>
            </value>
            <value>
                <fullName>sf_client_id</fullName>
            </value>
            <value>
                <fullName>sf_client</fullName>
            </value>
            <value>
                <fullName>sf_payment_plan</fullName>
            </value>
            <value>
                <fullName>sf_payment_status</fullName>
            </value>
            <value>
                <fullName>sf_channel</fullName>
            </value>
            <value>
                <fullName>sf_outlet</fullName>
            </value>
            <value>
                <fullName>sf_operator_id</fullName>
            </value>
            <value>
                <fullName>sf_settlement_code</fullName>
            </value>
            <value>
                <fullName>sf_payment_type_processing_method</fullName>
            </value>
            <value>
                <fullName>sf_payment_type</fullName>
            </value>
            <value>
                <fullName>sf_merchant_account</fullName>
            </value>
            <value>
                <fullName>sf_payment_amount</fullName>
            </value>
            <value>
                <fullName>sf_payment_responsibity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>