force-app/main/default/objects/FIN_AXSRuleAction__c/fields/FIN_StatusFieldValue__c.field-meta.xml
<CustomField>
    <fullName>FIN_StatusFieldValue__c</fullName>
    <label>Status Field Value</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_DestinationField__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>ToBeSettled</fullName>
                <label>To Be Settled</label>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>ScheduledSettlement</fullName>
                <label>Scheduled Settlement</label>
            </value>
            <value>
                <fullName>ToBeInvoiced</fullName>
                <label>To Be Invoiced</label>
            </value>
            <value>
                <fullName>InvoiceScheduled</fullName>
                <label>Invoice Scheduled</label>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>To be Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>ToBePosted</fullName>
                <label>To Be Posted</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Exported</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Submitted for Review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>