force-app/main/default/objects/FIN_AXSRuleAction__c/recordTypes/AXS_Action_Settlement_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>AXS_Action_Settlement_Record_Type</fullName>
    <active>true</active>
    <label>Settlement Rule Record Type</label>
</RecordType>