force-app/main/default/objects/FIN_AXSRuleAction__c/recordTypes/AXS_Rule_Action_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>AXS_Rule_Action_Record_Type</fullName>
    <active>true</active>
    <label>Enrichment Tagging Record Type</label>
</RecordType>